Fixed mobile alignment issues in the nav bar and contact form. Adjusting mobile breakpoints.

--- a/css/index.css
+++ b/css/index.css
@@ -332,7 +332,8 @@ h1 {
 }
 @media only screen and (max-width: 500px) {
   h1 {
-    font-size: 2.5rem;
+    font-size: 2.2rem;
+    max-width: 45%;
   }
 }
 h2,
@@ -355,9 +356,9 @@ p {
 .hand-written {
   font-family: 'Handlee', cursive;
 }
-.content {
-  width: 80%;
-  margin: 0 auto;
+main {
+  display: flex;
+  flex-direction: column;
 }
 .first-background {
   background-image: url("../images/journal.jpg");
@@ -369,30 +370,46 @@ p {
   flex-direction: column;
 }
 .sectionA {
-  margin: 0 0 3rem 0;
   width: 100%;
+  max-width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   flex-direction: row-reverse;
   align-items: flex-end;
   border-bottom: 1px solid black;
   position: fixed;
+  background: #c9ced1;
 }
 .sectionA div {
   margin: 0 0;
+  width: 40%;
 }
 .sectionA .navbar {
   width: 60%;
+  display: flex;
+  justify-content: flex-end;
+}
+@media only screen and (max-width: 500px) {
+  .sectionA .navbar {
+    width: 60%;
+  }
 }
 .sectionA nav {
   display: flex;
   justify-content: flex-end;
+  max-width: 60%;
 }
 .sectionA nav a {
   text-decoration: none;
   color: black;
   font-size: 2rem;
-  padding: 0 1.5rem;
+  padding: 0 2rem;
+}
+@media only screen and (max-width: 500px) {
+  .sectionA nav a {
+    padding: 0 0.5rem;
+    font-size: 1.5rem;
+  }
 }
 .sectionA nav a:hover {
   color: white;
@@ -402,7 +419,6 @@ p {
   background: #3C8C9E;
 }
 .sectionB {
-  height: 200vh;
   width: 50%;
   margin-left: 45%;
   display: flex;
@@ -444,6 +460,12 @@ p {
   }  */
   /* Fading animation */
 }
+@media only screen and (max-width: 500px) {
+  .sectionB {
+    width: 100%;
+    margin: 0 0;
+  }
+}
 .sectionB div {
   margin: 0.5rem;
 }
@@ -454,10 +476,6 @@ p {
   background-color: white;
   max-width: 50vw;
   width: 30vw;
-}
-.sectionB .p_carousel {
-  height: 30vh;
-  overflow: hidden;
 }
 .sectionB img {
   width: 100%;
@@ -558,7 +576,6 @@ p {
   font-size: 2rem;
 }
 .sectionD {
-  height: 130vh;
   background-image: url("../images/airplane_window.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -567,21 +584,24 @@ p {
   display: flex;
   flex-direction: column;
 }
+.sectionD h2 {
+  margin: 1rem 0;
+}
 .sectionD .center-card {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 90vw;
-  margin: 0 auto;
+  width: 100%;
+  margin: 0 auto 10rem auto;
   flex-flow: row wrap;
 }
 .sectionD .center-card .team-member {
-  width: 20vw;
+  width: 25%;
+  margin: 1.5rem 2.5rem;
   background: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 15px;
-  margin: 10% 10% 0 0;
 }
 .sectionD .center-card .team-member .container {
   padding: 2px 16px;
@@ -602,9 +622,12 @@ p {
   background-position: center;
   background-size: cover;
   display: flex;
-  justify-contents: center;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+.sectionE div {
+  max-width: 100%;
 }
 .sectionE .form-field {
   margin: 1rem 0;
@@ -617,9 +640,10 @@ p {
 }
 .sectionE .form-field textarea {
   background-color: rgba(255, 186, 122, 0.9);
+  max-width: 100%;
 }
 footer {
-  background: white;
+  background: #c9ced1;
   display: flex;
   align-items: center;
   justify-content: space-between;
